<resources>
    <string name="app_name">C196</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>

    <string name="mentor_hint_word">Mentor...</string>
    <string name="course_hint_word">Course...</string>
    <string name="assessment_hint_word">Assessment...</string>
    <string name="term_hint_word">Term...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Mentor not saved because it is empty.</string>
    <string name="title_activity_home">WGU 196</string>
    <string name="title_activity_assessment_list">Assessments</string>
    <string name="title_activity_assessment__edit">Edit Assessment</string>
    <string name="title_activity_course__list">Courses</string>
    <string name="title_activity_course__edit">Edit Course</string>
    <string name="title_activity_mentor_list">Mentors</string>
    <string name="title_activity_mentor_edit">Edit Mentor</string>
    <string name="title_activity_term_list">Terms</string>
    <string name="title_activity_term_edit">Edit Term</string>
    <string name="term_edit_StartDate">Start Date</string>
    <string name="term_edit_EndDate">End Date</string>
    <string name="term_edit_title">Term Title (e.g. Term 1)</string>
    <string name="mentor_edit_name">Mentor Name</string>
    <string name="mentor_edit_phone">Phone</string>
    <string name="mentor_edit_email">Email</string>
    <string name="assessment_edit_date">Assessment Date</string>
    <string name="assessment_edit_name">Assessment Name</string>
    <string name="assessment_goal_date">Goal Date</string>
    <string name="course_edit_enddate">End Date</string>
    <string name="course_edit_startdate">Start Date</string>
    <string name="course_edit_status">Status</string>
    <string name="course_edit_title">Title</string>
    <string name="course_edit_notes">Notes</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_info">Info</string>
    <string name="channel_name">C196Channel</string>
    <string name="channel_description">C196Channel Description</string>

</resources>
