<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_term_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/term_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/term_edit_title"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_term_edit_StartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/term_edit_StartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/term_edit_StartDate"
                    android:inputType="date"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_term_edit_EndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/term_edit_EndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/term_edit_EndDate"
                    android:inputType="date"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvNumbers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:background="@color/colorPrimary"
                android:padding="@dimen/small_padding"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>