<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_course_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/course_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:hint="@string/course_edit_title"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_course_edit_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/course_edit_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:hint="@string/course_edit_status"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_course_edit_startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/course_edit_startdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/course_edit_startdate"
                    android:inputType="date"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/course_edit_startdatealert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:padding="@dimen/small_padding"
                android:text="Alert for Course Start Date"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_course_edit_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/course_edit_enddate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/course_edit_enddate"
                    android:inputType="date"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/course_edit_enddatealert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:padding="@dimen/small_padding"
                android:text="Alert for Course End Date"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_course_edit_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/course_edit_notes"
                    android:minLines="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:hint="@string/course_edit_notes"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/small_padding"
                    android:singleLine="false"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/big_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Available Mentors for this Course"
                android:editable="false"
                android:clickable="false"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/big_padding" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#000000" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCourseMentors"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="@dimen/big_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Available Assessments for this Course"
                android:editable="false"
                android:clickable="false"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/big_padding" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#000000" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCourseAssessments"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/small_padding"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>