<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_assessment_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/assessment_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:hint="@string/assessment_edit_name"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_assessment_edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/assessment_edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/assessment_edit_date"
                    android:inputType="date"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_assessment_goal_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/assessment_goal_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:clickable="true"
                    android:drawableRight="@drawable/ic_clear_black_24dp"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/assessment_goal_date"
                    android:inputType="date"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/ckGoalAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:padding="@dimen/small_padding"
                android:text="Alert for Goal Date"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/assessment_edit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:orientation="horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="18sp">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Type:"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rdObjective"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Assessment"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rdPerformance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Performance"
                    android:textSize="18sp" />
            </RadioGroup>


            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/small_padding"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>